# above-ground

./: .gitignore  KalmanFilter.py  README.md  airsim_connec_track2.py  airsim_connec_track3.py  airsim_connect.py  airsim_connect_2.py  airsim_connect_clear.py  airsim_connect_keystroke.py  airsim_lib.py  airsim_lib_.py  airsim_lib_exp.py  airsim_lib_exp_.py  airsim_rl.py  airsim_test_gpt.py  airsim_test_gpt2.py  airsim_test_gpt3.py  airsim_two.py  airsim_yaw_throtle.py  beta.py  genetic_pid.py  glue_part.py  glue_part1.py  glue_part_test.py  main.py  opencv_tracker.py  requirements.txt  slam_part.py  temp_draft.py  test_move.py  test_open.py  test_open_image.py  tofly.py  tofly2.py  tracker_lib.py  visual_dron_path.py
above/: __init__.py
above/envs/: __init__.py  drone_env.py
blender-script/: script_extrude.py  script_extrude4.py
data/: coord_scren.txt  script_extrude.py  script_extrude2.py  script_extrude3.py  ttx.txt
data-mining/: db.sqlite3
data-mining/data_mining/: asgi.py  db.sqlite3  routing.py
data-mining/data_mining/data_mining/: settings.py  urls.py
data-mining/data_mining/main_channels/: __init__.py  main_channels.py
data-mining/data_mining/model_view/: admin.py  models.py
data-mining/data_mining/templates/: index.html
data-mining/main_channels/: main_channels.py
data-mining/model_view/: views.py
deep_v2/: CMakeLists.txt  README.md  main.cpp  postprocess.cpp  postprocess.h
deep_v2/tracker/deepsort/include/: dataType.h
deep_v2/tracker/deepsort/src/: FeatureTensor.cpp
info/: 3D-ландшафты в реальном времени на С++ и DirectX9.djvu  detector_diskriptor.md  game.md  info.md  simulator.md
tracker_lib/: tracker_lib.py
unreal-script/: AboveSpline2.cpp  AboveSpline2.h  PawnAbove.cpp  PawnAbove.h  aboveActor.cpp  aboveActor.h  settings.json
unreal-script/Source/above2/: CameraCaptureToDisk.cpp  CameraCaptureToDisk.h  CaptureManager.cpp  CaptureManager.h  FlightC.cpp  FlightC.h  FlightStopActor.cpp  above2GameModeBase.h  aboveActor.cpp
unreal-script/Source/above_v0/: above2.Target.cs  above2Editor.Target.cs
unreal-script/Source/above_v0/above2/: CaptureManager.cpp  CaptureManager.h  FlightC.cpp  FlightStopActor.h  above2.Build.cs  above2.cpp  above2GameModeBase.cpp  aboveActor.h
unreal-script/Source/above_v1/: above.Target.cs  aboveEditor.Target.cs
unreal-script/Source/above_v1/above/: CaptureManager.cpp  CaptureManager.h  FlightC.cpp  FlightC.h  above.cpp  (+5 more)
web-UI/: client.py  genetic_pid.py  main.py  server.py  server_2.py  test.py  test.sh  tofly.py  tofly_s.py  tracker_lib.py  tracker_queue.py
